--- a/1-setup-component-state/package.json
+++ b/1-setup-component-state/package.json
@@ -1,7 +1,7 @@
 {
   "name": "1-setup-component-state",
   "version": "1.0.0",
-  "description": "For this 7 steps example my code objects import/export is [nodejs](https://nodejs.org/) style so for bundler I use [browserify](http://browserify.org/) so:\r - init package.json: **npm init -y** \r - install browserify as a development dependency: \r  **npm i -D browserify**",
+  "description": "For this example my code objects import/export is [nodejs](https://nodejs.org/) style so for bundler I use [browserify](http://browserify.org/) so:\r - init package.json: **npm init -y** \r - install browserify as a development dependency: \r  **npm i -D browserify**",
   "main": "index.js",
   "scripts": {
     "bundle-js": "browserify ./src/component/component.js -o ./src/bundle.js",
